# urirun-connector-sqlite-context

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
docker/: Dockerfile  run-smoke.sh
examples/: README.md  quickstart.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract_conformance.py  test_sqlite_context_connector.py
urirun_connector_sqlite_context/: __init__.py  _exec.py  cli.py  connector.manifest.json  contracts.py  core.py
