[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-sqlite-context"
version = "0.1.1"
description = "SQLite context, artifacts, checks and logs connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "jsonschema>=4.18",
  "urirun @ git+https://github.com/if-uri/urirun.git@v0.3.14#subdirectory=adapters/python",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/sqlite-context"
Repository = "https://github.com/if-uri/urirun-connector-sqlite-context"

[project.scripts]
urirun-sqlite-context = "urirun_connector_sqlite_context.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_sqlite_context*"]

[tool.setuptools.package-data]
urirun_connector_sqlite_context = ["connector.manifest.json"]
